--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,15 @@
           box-sizing: border-box;
 }
 
+:root {
+  --bebas: 'Bebas Neue';
+}
+
 .curtain {
   position: relative;
   height: 100vh;
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
 }
 
 .curtain__site {
@@ -82,7 +84,7 @@
 .curtain__box-title .curtain__title {
   text-align: center;
   font-size: 3.5rem;
-  font-family: 'Bebas Neue';
+  font-family: var(--bebas);
   letter-spacing: 2px;
   color: gold;
   text-shadow: 0 0 5px orangered, 0 0 10px orangered, 0 0 20px orangered, 0 0 30px orangered, 0 0 40px orangered;
@@ -236,5 +238,87 @@
   .curtain__site--right {
     background-position: 100% 50%;
   }
+}
+
+.home .main {
+  position: relative;
+}
+
+.home .main .navbar {
+  height: 8vh;
+  background-color: #222222;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #cfcfcf;
+  text-align: center;
+}
+
+.home .main .navbar__icon {
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+  font-size: 1.5rem;
+  line-height: 8vh;
+}
+
+.home .main .navbar__title {
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
+  line-height: 8vh;
+  font-family: 'Bebas Neue';
+  letter-spacing: 2px;
+  font-size: 2rem;
+}
+
+.home .main .header {
+  position: relative;
+  height: 70vh;
+  background-image: url("../images/header.png");
+  background-size: cover;
+  background-position: 40% 0;
+  text-align: center;
+}
+
+.home .main .header__text-container {
+  position: absolute;
+  top: 10%;
+  left: 0;
+  right: 0;
+}
+
+.home .main .header__text-container .header__title {
+  font-size: 2.5rem;
+  font-family: 'Bebas Neue';
+  letter-spacing: 2px;
+  color: gold;
+  text-shadow: 0 0 10px orangered, 0 0 20px orangered, 0 0 40px orangered, 0 0 30px orangered, 0 0 50px orangered;
+}
+
+.home .main .header__text-container .header__button {
+  text-decoration: none;
+  display: inline-block;
+  margin: 2vh 3vh;
+  padding: 10px 20px;
+  color: #cfcfcf;
+  border: 1px solid rgba(245, 245, 245, 0.7);
+}
+
+.home .main .header__text-container .header__button--sign-up:hover {
+  background-color: rgba(245, 245, 245, 0.7);
+  color: black;
+}
+
+.home .main .header__text-container .header__button--sign-in {
+  color: #709625;
+  background-color: gold;
+  border-color: gold;
+  -webkit-box-shadow: 0 0 10px orangered, 0 0 20px orangered, 0 0 40px orangered, 0 0 30px orangered, 0 0 50px orangered;
+          box-shadow: 0 0 10px orangered, 0 0 20px orangered, 0 0 40px orangered, 0 0 30px orangered, 0 0 50px orangered;
+}
+
+.home .main .header__text-container .header__button--sign-in:hover {
+  background-color: orangered;
+  border-color: orangered;
+  color: gold;
 }
 /*# sourceMappingURL=main.css.map */
