--- a/scss/_curtain.scss
+++ b/scss/_curtain.scss
@@ -11,11 +11,14 @@
 // Curtain
 
 .curtain {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
-    // display: flex;
-    display: none;
+    display: flex;
+    z-index: 1;
 
     &__site {
         flex-basis: 50%;
