--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,310 +1,6 @@
-body {
-    background-color: rgb(100, 100, 100);
-}
-
 .home {
 
-    .navigation-box-left {
-        width: 30vw;
-        height: 100%;
-        position: fixed;
-        left: -30vw;
-        z-index: 99;
-        transition: .75px;
-        overflow: auto;
-        background-color: rgb(34, 34, 34);
-
-        &--active {
-            left: 0 !important;
-        }
-
-        .navigation-box-left__cross {
-            display: block;
-            margin: 3rem .5rem 0;
-            font-size: 2rem;
-            color: rgb(207, 207, 207);
-            cursor: pointer;
-        }
-
-        &__list {
-            margin: 4rem .5rem;
-
-            .navigation-box-left__item {
-                margin: 1rem 0;
-                font-size: 1rem;
-                font-family: 'Bebas Neue';
-
-                .navigation-box-left__link {
-                    text-decoration: none;
-                    color: rgb(207, 207, 207);
-
-                    &:hover {
-                        color: white;
-                    }
-                }
-            }
-        }
-    }
-
-    .navigation-box-right {
-        width: 40vw;
-        height: 100%;
-        position: fixed;
-        right: -40vw;
-        float: right;
-        z-index: 99;
-        transition: .75s;
-        overflow: auto;
-        background-color: rgb(34, 34, 34);
-
-        &--active {
-            right: 0 !important;
-        }
-
-        .navigation-box-right__cross {
-            display: block;
-            margin: 3rem .5rem 0;
-            font-size: 2rem;
-            color: rgb(207, 207, 207);
-            cursor: pointer;
-        }
-
-        .sign-container {
-            display: flex;
-            width: 100%;
-            margin: 3rem 0;
-
-            &__text {
-                position: relative;
-                flex-basis: 50%;
-                font-size: .7rem;
-                text-align: center;
-                color: rgb(207, 207, 207);
-                opacity: .5;
-                border-bottom: 2px solid orangered;
-                padding-bottom: .3rem;
-                cursor: pointer;
-
-                &--active {
-                    border-bottom: 4px solid gold;
-                    opacity: 1;
-                }
-            }
-        }
-
-        .navigation-box-right__text {
-            position: relative;
-            width: 100%;
-            margin: 2rem 0;
-            font-size: .8rem;
-            color: rgb(207, 207, 207);
-            opacity: .8;
-            text-align: center
-        }
-
-        .sign-in-form {
-            position: relative;
-
-            &__input {
-                min-height: 4vh;
-                width: 100%;
-                background-color: rgb(70, 70, 70);
-                border: none;
-                border-top: 1px solid rgb(100, 100, 100);
-                border-bottom: 1px solid rgb(100, 100, 100);
-                padding-left: 2rem;
-                color: rgb(207, 207, 207);
-
-                &::placeholder {
-                    font-size: .7rem;
-                }
-
-                &:focus {
-                    outline: none;
-                }
-
-                &--login:focus~.sign-in-form__icon--login {
-                    opacity: 1;
-                }
-
-                &--password:focus~.sign-in-form__icon--password {
-                    opacity: 1;
-                }
-            }
-
-            &__icon {
-                position: absolute;
-                top: 2vh;
-                left: .5rem;
-                transform: translateY(-50%);
-                font-size: .8rem;
-                color: rgb(207, 207, 207);
-                opacity: .3;
-
-                &--password {
-                    top: 6vh;
-                    transform: translateY(-50%);
-                }
-            }
-
-            &__button {
-                margin: 2rem 1rem;
-                padding: .5rem 1rem;
-                border-radius: 2rem;
-                border: none;
-                border: 2px solid orangered;
-                background-color: transparent;
-                color: orangered;
-
-                &:hover {
-                    background-color: orangered;
-                    color: gold;
-                }
-            }
-        }
-
-        .sign-up-form {
-            position: relative;
-            display: none;
-
-            &__input {
-                min-height: 4vh;
-                width: 100%;
-                background-color: rgb(70, 70, 70);
-                border: none;
-                border-top: 1px solid rgb(100, 100, 100);
-                border-bottom: 1px solid rgb(100, 100, 100);
-                padding-left: 2rem;
-                color: rgb(207, 207, 207);
-
-                &::placeholder {
-                    font-size: .7rem;
-                }
-
-                &:focus {
-                    outline: none;
-                }
-
-                &--name:focus~.sign-up-form__icon--name {
-                    opacity: 1;
-                }
-
-                &--surname:focus~.sign-up-form__icon--surname {
-                    opacity: 1;
-                }
-
-                &--year:focus~.sign-up-form__icon--year {
-                    opacity: 1;
-                }
-
-                &--email:focus~.sign-up-form__icon--email {
-                    opacity: 1;
-                }
-
-                &--login:focus~.sign-up-form__icon--login {
-                    opacity: 1;
-                }
-
-                &--password:focus~.sign-up-form__icon--password {
-                    opacity: 1;
-                }
-            }
-
-            &__icon {
-                position: absolute;
-                top: 2vh;
-                left: .5rem;
-                transform: translateY(-50%);
-                font-size: .8rem;
-                color: rgb(207, 207, 207);
-                opacity: .5;
-
-                &--surname {
-                    top: 6vh;
-                    transform: translateY(-50%);
-                }
-
-                &--year {
-                    top: 10vh;
-                    transform: translateY(-50%);
-                }
-
-                &--email {
-                    top: 14vh;
-                    transform: translateY(-50%);
-                }
-
-                &--login {
-                    top: 18vh;
-                    transform: translateY(-50%);
-                }
-
-                &--password {
-                    top: 22vh;
-                    transform: translateY(-50%);
-                }
-            }
-
-            &__button {
-                margin: 2rem 1rem;
-                padding: .5rem 1rem;
-                border-radius: 2rem;
-                border: none;
-                border: 2px solid orangered;
-                background-color: transparent;
-                color: orangered;
-
-                &:hover {
-                    background-color: orangered;
-                    color: gold;
-                }
-            }
-        }
-    }
-
     .main {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        position: relative;
-        left: 0%;
-        right: 0%;
-        float: right;
-        transition: .75s;
-        overflow: auto;
-
-        &--active-left {
-            left: 10%;
-            transform: matrix3d(0.62, 0, 2, -.0002, 0.00, .8, 0.00, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-        }
-
-        &--active-right {
-            right: 10%;
-            transform: matrix3d(0.62, 0, 2, .0002, 0.00, .8, 0.00, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-        }
-
-        .navbar {
-            height: 8vh;
-            background-color: rgb(34, 34, 34);
-            display: flex;
-            color: rgb(207, 207, 207);
-            text-align: center;
-
-            &__icon {
-                flex-basis: 20%;
-                font-size: 1.5rem;
-                line-height: 8vh;
-                cursor: pointer;
-            }
-
-            &__title {
-                flex-basis: 60%;
-                line-height: 8vh;
-                font-family: 'Bebas Neue';
-                letter-spacing: 2px;
-                font-size: 2rem;
-            }
-        }
 
         .header {
             position: relative;
@@ -451,110 +147,7 @@ body {
 @media (min-width: 768px) {
     .home {
 
-        .navigation-box-left {
-
-            .navigation-box-left__cross {
-                font-size: 4rem;
-            }
-
-            &__list {
-
-                .navigation-box-left__item {
-                    font-size: 2rem;
-                }
-            }
-        }
-
-        .navigation-box-right {
-            width: 30vw;
-            right: -30vw;
-
-            .navigation-box-right__cross {
-                margin: 3rem 1rem 0;
-                font-size: 3rem;
-            }
-
-            .sign-container {
-                margin: 4rem 0;
-
-                &__text {
-                    font-size: 1.2rem;
-                    border-bottom: 4px solid orangered;
-                    padding-bottom: .5rem;
-
-                    &--active {
-                        border-bottom: 6px solid gold;
-                    }
-                }
-            }
-
-            .navigation-box-right__text {
-                font-size: 1.2rem;
-            }
-
-            .sign-in-form {
-
-                &__input {
-                    padding-left: 3rem;
-                    font-size: 1.2rem;
-
-                    &::placeholder {
-                        font-size: 1.2rem;
-                    }
-                }
-
-                &__icon {
-                    left: 1rem;
-                    font-size: 1.2rem;
-                }
-
-                &__button {
-                    margin: 3rem 1rem;
-                    padding: 1rem 2rem;
-                    border: 4px solid orangered;
-                    font-size: 1.2rem;
-                }
-            }
-
-            .sign-up-form {
-
-                &__input {
-                    padding-left: 3rem;
-                    font-size: 1.2rem;
-
-                    &::placeholder {
-                        font-size: 1.2rem;
-                    }
-                }
-
-                &__icon {
-                    left: 1rem;
-                    font-size: 1.2rem;
-                }
-
-                &__button {
-                    margin: 3rem 1rem;
-                    padding: 1rem 2rem;
-                    border: 4px solid orangered;
-                    font-size: 1.2rem;
-                }
-            }
-        }
-
         .main {
-
-            .navbar {
-
-                &__icon {
-                    font-size: 2.5rem;
-                }
-
-                &__title {
-                    letter-spacing: 4px;
-                    font-size: 3rem;
-                }
-            }
-
             .header {
 
                 &__text-container {
@@ -596,150 +189,7 @@ body {
 @media (orientation: landscape) and (min-height: 360px) {
     .home {
 
-        .navigation-box-left {
-            width: 20vw;
-            left: -20vw;
-
-            .navigation-box-left__cross {
-                margin: 1rem .5rem 0;
-                font-size: 2rem;
-            }
-
-            &__list {
-                margin: 1rem .5rem;
-
-                .navigation-box-left__item {
-                    margin: .7rem 0;
-                    font-size: 1.1rem;
-                }
-            }
-        }
-
-        .navigation-box-right {
-            width: 30vw;
-            right: -30vw;
-
-            .navigation-box-right__cross {
-                margin: 1rem .5rem 0;
-                font-size: 2rem;
-            }
-
-            .sign-container {
-                margin: 1rem 0;
-
-                &__text {
-                    font-size: .8rem;
-                    border-bottom: 2px solid orangered;
-                    padding-bottom: .3rem;
-
-                    &--active {
-                        border-bottom: 4px solid gold;
-                    }
-                }
-            }
-
-            .navigation-box-right__text {
-                margin: 1rem 0;
-                font-size: .8rem;
-            }
-
-            .sign-in-form {
-
-                &__input {
-                    min-height: 6vh;
-                    padding-left: 2rem;
-                    font-size: 0.8rem;
-
-                    &::placeholder {
-                        font-size: .8rem;
-                    }
-                }
-
-                &__icon {
-                    top: 3vh;
-                    left: .5rem;
-                    font-size: .8rem;
-
-                    &--password {
-                        top: 9vh;
-                    }
-                }
-
-                &__button {
-                    margin: 1rem 1rem;
-                    padding: .5rem 1rem;
-                    border: 2px solid orangered;
-                    font-size: .8rem;
-                }
-            }
-
-            .sign-up-form {
-
-                &__input {
-                    min-height: 6vh;
-                    padding-left: 2rem;
-                    font-size: .8rem;
-
-                    &::placeholder {
-                        font-size: .8rem;
-                    }
-                }
-
-                &__icon {
-                    top: 3vh;
-                    left: .5rem;
-                    font-size: .8rem;
-
-                    &--surname {
-                        top: 9vh;
-                        transform: translateY(-50%);
-                    }
-
-                    &--year {
-                        top: 15vh;
-                        transform: translateY(-50%);
-                    }
-
-                    &--email {
-                        top: 21vh;
-                        transform: translateY(-50%);
-                    }
-
-                    &--login {
-                        top: 27vh;
-                        transform: translateY(-50%);
-                    }
-
-                    &--password {
-                        top: 33vh;
-                        transform: translateY(-50%);
-                    }
-                }
-
-                &__button {
-                    margin: 1rem 1rem;
-                    padding: .5rem 1rem;
-                    border: 2px solid orangered;
-                    font-size: .8rem;
-                }
-            }
-        }
-
         .main {
-
-            .navbar {
-                height: 11vh;
-
-                &__icon {
-                    flex-basis: 10%;
-                    line-height: 11vh;
-                }
-
-                &__title {
-                    flex-basis: 80%;
-                    line-height: 11vh;
-                }
-            }
 
             .header {
                 height: 89vh;
@@ -805,106 +255,7 @@ body {
 @media (orientation: landscape) and (min-width: 1024px) {
     .home {
 
-        .navigation-box-left {
-
-            .navigation-box-left__cross {
-                margin: 3rem .5rem 0;
-                font-size: 3rem;
-            }
-
-            &__list {
-                margin: 3rem .5rem;
-
-                .navigation-box-left__item {
-                    margin: 1rem 0;
-                    font-size: 1.8rem;
-                }
-            }
-        }
-
-        .navigation-box-right {
-
-            .navigation-box-right__cross {
-                margin: 3rem .5rem 0;
-                font-size: 3rem;
-            }
-
-            .sign-container {
-                margin: 3rem 0;
-
-                &__text {
-                    font-size: 1.2rem;
-                    border-bottom: 4px solid orangered;
-                    padding-bottom: .5rem;
-
-                    &--active {
-                        border-bottom: 6px solid gold;
-                    }
-                }
-            }
-
-            .navigation-box-right__text {
-                margin: 2rem 0;
-                font-size: 1.2rem;
-            }
-
-            .sign-in-form {
-
-                &__input {
-                    padding-left: 3rem;
-                    font-size: 1.2rem;
-
-                    &::placeholder {
-                        font-size: 1.2rem;
-                    }
-                }
-
-                &__icon {
-                    left: 1rem;
-                    font-size: 1.2rem;
-                }
-
-                &__button {
-                    margin: 2rem 1rem;
-                    padding: 1rem 2rem;
-                    border: 4px solid orangered;
-                    font-size: 1.2rem;
-                }
-            }
-
-            .sign-up-form {
-
-                &__input {
-                    padding-left: 3rem;
-                    font-size: 1.2rem;
-
-                    &::placeholder {
-                        font-size: 1.2rem;
-                    }
-                }
-
-                &__icon {
-                    left: 1rem;
-                    font-size: 1.2rem;
-                }
-
-                &__button {
-                    margin: 2rem 1rem;
-                    padding: 1rem 2rem;
-                    border: 4px solid orangered;
-                    font-size: 1.2rem;
-                }
-            }
-        }
-
         .main {
-
-            .navbar {
-
-                &__title {
-                    font-size: 3.5rem;
-                }
-            }
 
             .header {
                 background-position: 0;
@@ -951,18 +302,7 @@ body {
 @media (min-width: 1440px) {
     .home {
 
-        .navigation-box-left {
-
-            .navigation-box-left__cross {
-                margin: 3rem 1rem 0;
-            }
-
-            &__list {
-                margin: 3rem 1rem;
-            }
-        }
-
-        min- .main {
+        .main {
 
             .header {
                 background-position: 0 90%;
