--- a/css/main.css
+++ b/css/main.css
@@ -1284,6 +1284,7 @@ body {
   color: whitesmoke;
   -webkit-transform: translateY(-25%);
           transform: translateY(-25%);
+  cursor: pointer;
 }
 
 .contact .main .contact-box .data-container .data-box__icon--close {
@@ -1296,5 +1297,136 @@ body {
   margin: 1rem;
   list-style: none;
   display: none;
+}
+
+@media (min-width: 768px) {
+  .contact .main .contact-box__title {
+    margin: 5rem 0 3rem;
+    letter-spacing: 5px;
+    font-size: 4rem;
+    text-shadow: 0 0 20px green, 0 0 30px green, 0 0 50px green, 0 0 40px green, 0 0 60px green;
+  }
+  .contact .main .contact-box__title:before {
+    left: 25%;
+    width: 50%;
+    height: 4px;
+  }
+  .contact .main .contact-box__subtitle {
+    font-size: 1.7rem;
+    margin-bottom: 4rem;
+  }
+  .contact .main .contact-box .data-container .data-box {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+  .contact .main .contact-box .data-container .data-box__circle {
+    border: 5px solid green;
+  }
+  .contact .main .contact-box .data-container .data-box__circle .data-box__icon {
+    font-size: 3rem;
+  }
+  .contact .main .contact-box .data-container .data-box__name {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+  .contact .main .contact-box .data-container .data-box__text {
+    font-size: 1.5rem;
+  }
+  .contact .main .contact-box .data-container .data-box__text--day {
+    margin: .4rem;
+  }
+  .contact .main .contact-box .data-container .data-box__icon {
+    font-size: 1.3rem;
+  }
+  .contact .main .contact-box .data-container .data-box__list {
+    margin: 2rem;
+  }
+}
+
+@media (orientation: landscape) and (min-height: 360px) {
+  .contact .main .contact-box {
+    margin-bottom: 3rem;
+  }
+  .contact .main .contact-box__title {
+    font-size: 2.5rem;
+  }
+  .contact .main .contact-box .data-container .data-box {
+    -ms-flex-preferred-size: 25%;
+        flex-basis: 25%;
+  }
+  .contact .main .contact-box .data-container .data-box__circle {
+    width: 20vh;
+    height: 20vh;
+  }
+  .contact .main .contact-box .data-container .data-box__circle .data-box__icon {
+    font-size: 1.5rem;
+  }
+  .contact .main .contact-box .data-container .data-box__name {
+    font-size: 1.5rem;
+  }
+  .contact .main .contact-box .data-container .data-box__text {
+    font-size: .7rem;
+  }
+  .contact .main .contact-box .data-container .data-box__icon {
+    font-size: .8rem;
+  }
+}
+
+@media (orientation: landscape) and (min-height: 768px) {
+  .contact .main .contact-box__title {
+    font-size: 3.5rem;
+  }
+  .contact .main .contact-box .data-container {
+    margin-left: 5%;
+    width: 90%;
+  }
+  .contact .main .contact-box .data-container .data-box__circle {
+    height: 18vh;
+    width: 18vh;
+  }
+  .contact .main .contact-box .data-container .data-box__circle .data-box__icon {
+    font-size: 3rem;
+  }
+  .contact .main .contact-box .data-container .data-box__name {
+    font-size: 2rem;
+    letter-spacing: 3px;
+  }
+  .contact .main .contact-box .data-container .data-box__text {
+    font-size: 1.2rem;
+  }
+  .contact .main .contact-box .data-container .data-box__icon {
+    font-size: 1.1rem;
+  }
+}
+
+@media (orientation: landscape) and (min-width: 1440px) {
+  .contact .main .contact-box__title {
+    font-size: 3.5rem;
+  }
+  .contact .main .contact-box__title:before {
+    left: 40%;
+    width: 20%;
+  }
+  .contact .main .contact-box .data-container {
+    margin-left: 5%;
+    width: 90%;
+  }
+  .contact .main .contact-box .data-container .data-box__circle {
+    height: 18vh;
+    width: 18vh;
+  }
+  .contact .main .contact-box .data-container .data-box__circle .data-box__icon {
+    font-size: 3rem;
+  }
+  .contact .main .contact-box .data-container .data-box__name {
+    font-size: 2rem;
+    letter-spacing: 3px;
+  }
+  .contact .main .contact-box .data-container .data-box__text {
+    font-size: 1.2rem;
+  }
+  .contact .main .contact-box .data-container .data-box__icon {
+    font-size: 1.1rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
