--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -144,7 +144,7 @@
     }
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .home {
 
         .main {
@@ -186,7 +186,7 @@
     }
 }
 
-@media (orientation: landscape) and (min-height: 360px) {
+@media screen and (orientation: landscape) and (min-height: 360px) {
     .home {
 
         .main {
@@ -252,7 +252,7 @@
     }
 }
 
-@media (orientation: landscape) and (min-width: 1024px) {
+@media screen and (orientation: landscape) and (min-width: 1024px) {
     .home {
 
         .main {
@@ -299,7 +299,7 @@
     }
 }
 
-@media (min-width: 1440px) {
+@media screen and (min-width: 1440px) {
     .home {
 
         .main {
