--- a/css/main.css
+++ b/css/main.css
@@ -1476,6 +1476,10 @@ body {
   color: gold;
 }
 
+.blackjack__main {
+  display: none;
+}
+
 @-webkit-keyframes rotatePhone {
   0% {
     -webkit-transform: rotate(0);
@@ -1527,17 +1531,20 @@ body {
   .rotate-container {
     display: none;
   }
-  .blackjack {
-    width: 100%;
-    height: 100vh;
+  .blackjack .main {
+    display: block;
+  }
+  .blackjack .main .background {
+    height: 89vh;
+    max-width: 100vw;
     position: relative;
     overflow: hidden;
   }
-  .blackjack__table {
+  .blackjack .main .background__table {
     position: absolute;
-    top: 0%;
-    left: -10%;
-    width: 120%;
+    top: 0;
+    left: -10vw;
+    width: 120vw;
     height: 70%;
     background-image: url("../images/green-table.png");
     border-bottom-left-radius: 50%;
@@ -1545,11 +1552,11 @@ body {
     border-bottom: 1px solid #666666;
     z-index: 3;
   }
-  .blackjack__wood {
+  .blackjack .main .background__wood {
     position: absolute;
-    left: -10%;
+    left: -10vw;
     top: 10%;
-    width: 120%;
+    width: 120vw;
     height: 70%;
     background-image: url("../images/wood.jpg");
     background-size: cover;
@@ -1558,26 +1565,260 @@ body {
     border-bottom: 1px solid #666666;
     z-index: 2;
   }
-  .blackjack__lether {
+  .blackjack .main .background__wood .background__pocket {
     position: absolute;
-    left: -10%;
+    bottom: 7%;
+    left: 15%;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  .blackjack .main .background__wood .background__pocket--right {
+    left: 75%;
+  }
+  .blackjack .main .background__wood .background__long-pocket {
+    position: absolute;
+    bottom: -4%;
+    left: 50%;
+    -webkit-transform: translateX(-50%) scale(0.6);
+            transform: translateX(-50%) scale(0.6);
+  }
+  .blackjack .main .background__lether {
+    position: absolute;
+    left: -10vw;
     top: 30%;
-    width: 120%;
+    width: 120vw;
     height: 65%;
     background-image: url("../images/lether.png");
     background-size: cover;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
     z-index: 1;
+    -webkit-filter: brightness(2.5);
+            filter: brightness(2.5);
   }
-  .blackjack__carpet {
+  .blackjack .main .background__carpet {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
-    width: 100%;
+    width: 100vw;
     background-image: url("../images/carpet.jpg");
     background-size: cover;
+  }
+  .blackjack .main .background .circles-container {
+    position: absolute;
+    margin: 0 1vw;
+    bottom: 0;
+    right: 0;
+    height: 15vh;
+    z-index: 99;
+  }
+  .blackjack .main .background .circles-container__circle {
+    position: absolute;
+    top: 4.5vh;
+    right: 1vh;
+    width: 6vh;
+    height: 6vh;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 2px solid black;
+    cursor: pointer;
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
+  .blackjack .main .background .circles-container__circle--main {
+    top: 2.5vh;
+    width: 10vh;
+    height: 10vh;
+    background-color: grey;
+  }
+  .blackjack .main .background .circles-container__circle--green {
+    background-color: green;
+  }
+  .blackjack .main .background .circles-container__circle--green-active {
+    right: 13vh;
+  }
+  .blackjack .main .background .circles-container__circle--red {
+    background-color: #a30101;
+  }
+  .blackjack .main .background .circles-container__circle--red-active {
+    right: 23vh;
+  }
+  .blackjack .main .background .circles-container__circle--blue {
+    background-color: blue;
+  }
+  .blackjack .main .background .circles-container__circle--blue-active {
+    right: 33vh;
+  }
+  .blackjack .main .game {
+    position: absolute;
+    top: 11vh;
+    left: 0;
+    height: 89vh;
+    width: 100vw;
+    z-index: 98;
+    font-family: 'Bebas Neue';
+    letter-spacing: 1px;
+    color: rgba(255, 217, 0, 0.7);
+    font-size: .9rem;
+  }
+  .blackjack .main .game__deck {
+    position: absolute;
+    top: 5%;
+    left: 15vw;
+    width: 43px;
+    height: 58px;
+    z-index: 99;
+    padding: 4px;
+    border-top: 3px solid white;
+    border-left: 3px solid white;
+  }
+  .blackjack .main .game__deck--start {
+    left: 65vw;
+    border: none;
+  }
+  .blackjack .main .game__saldo {
+    position: absolute;
+    top: 50%;
+    left: 10vw;
+  }
+  .blackjack .main .game__saldo span {
+    font-size: 1.2rem;
+    color: orangered;
+  }
+  .blackjack .main .game .form {
+    position: absolute;
+    top: 40%;
+    left: 10vw;
+  }
+  .blackjack .main .game .form__rate {
+    background: transparent;
+    border: 1px solid rgba(255, 217, 0, 0.7);
+    -webkit-box-shadow: 0 0 2px gold;
+            box-shadow: 0 0 2px gold;
+    font-size: 1rem;
+    color: orangered;
+    width: 65px;
+    padding: .1rem;
+  }
+  .blackjack .main .game .form__rate:focus {
+    outline: none;
+    border: 1px solid orangered;
+    -webkit-box-shadow: 0 0 2px orangered;
+            box-shadow: 0 0 2px orangered;
+  }
+  .blackjack .main .game__play-btn {
+    position: absolute;
+    top: 55%;
+    left: 45vw;
+    padding: .2rem .6rem;
+    color: rgba(255, 217, 0, 0.7);
+    font-family: 'Bebas Neue';
+    letter-spacing: 1px;
+    font-size: 1.2rem;
+    overflow: hidden;
+    -webkit-transition: .2s;
+    transition: .2s;
+    background: transparent;
+    border: none;
+    -webkit-box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+            box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+    cursor: pointer;
+  }
+  .blackjack .main .game__play-btn:hover {
+    background: orangered;
+    -webkit-box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+            box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+  }
+  .blackjack .main .game .option-btns {
+    position: absolute;
+    top: 50%;
+    left: 50vw;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .blackjack .main .game .option-btns__btn {
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    background: rgba(255, 68, 0, 0.6);
+    font-family: 'Bebas Neue';
+    letter-spacing: 1px;
+    color: rgba(255, 217, 0, 0.7);
+    border: 2px solid rgba(255, 217, 0, 0.7);
+  }
+  .blackjack .main .game .option-btns__btn:hover {
+    border: 4px solid rgba(255, 217, 0, 0.7);
+    background: orangered;
+  }
+  .blackjack .main .game .option-btns__btn--pick {
+    margin-right: 1rem;
+  }
+  .blackjack .main .game .stats {
+    position: absolute;
+    top: 10%;
+    left: 80vw;
+    font-size: .8rem;
+  }
+  .blackjack .main .game .stats__text {
+    font-size: .9rem;
+    margin-bottom: 1rem;
+    text-shadow: 0 0 10px orangered, 0 0 30px orangered;
+  }
+  .blackjack .main .game .stats span {
+    color: orangered;
+    font-size: 1.1rem;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-height: 768px) {
+  .rotate-container {
+    display: none;
+  }
+  .blackjack .main {
+    display: block;
+  }
+  .blackjack .main .background__wood .background__pocket {
+    bottom: 14%;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  .blackjack .main .background__wood .background__pocket--right {
+    bottom: 12%;
+  }
+  .blackjack .main .background__wood .background__long-pocket {
+    bottom: 2%;
+    -webkit-transform: translateX(-50%) scale(1.2);
+            transform: translateX(-50%) scale(1.2);
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-width: 1440px) {
+  .rotate-container {
+    display: none;
+  }
+  .blackjack .main {
+    display: block;
+  }
+  .blackjack .main .background__wood .background__pocket {
+    bottom: 14%;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  .blackjack .main .background__wood .background__pocket--right {
+    bottom: 12%;
+  }
+  .blackjack .main .background__wood .background__long-pocket {
+    bottom: 2%;
+    -webkit-transform: translateX(-50%) scale(1.2);
+            transform: translateX(-50%) scale(1.2);
   }
 }
 /*# sourceMappingURL=main.css.map */
