--- a/scss/_blackjack.scss
+++ b/scss/_blackjack.scss
@@ -45,6 +45,10 @@
     }
 }
 
+.blackjack__main {
+    display: none;
+}
+
 @keyframes rotatePhone {
     0% {
         transform: rotate(0);
@@ -93,59 +97,340 @@
     }
 
     .blackjack {
-        width: 100%;
-        height: 100vh;
-        position: relative;
-        overflow: hidden;
 
-        &__table {
-            position: absolute;
-            top: 0%;
-            left: -10%;
-            width: 120%;
-            height: 70%;
-            background-image: url('../images/green-table.png');
-            border-bottom-left-radius: 50%;
-            border-bottom-right-radius: 50%;
-            border-bottom: 1px solid rgb(102, 102, 102);
-            z-index: 3;
+        .main {
+            display: block;
+
+
+            .background {
+                height: 89vh;
+                max-width: 100vw;
+                position: relative;
+                overflow: hidden;
+
+
+                &__table {
+                    position: absolute;
+                    top: 0;
+                    left: -10vw;
+                    width: 120vw;
+                    height: 70%;
+                    background-image: url('../images/green-table.png');
+                    border-bottom-left-radius: 50%;
+                    border-bottom-right-radius: 50%;
+                    border-bottom: 1px solid rgb(102, 102, 102);
+                    z-index: 3;
+                }
+
+                &__wood {
+                    position: absolute;
+                    left: -10vw;
+                    top: 10%;
+                    width: 120vw;
+                    height: 70%;
+                    background-image: url('../images/wood.jpg');
+                    background-size: cover;
+                    border-bottom-left-radius: 50%;
+                    border-bottom-right-radius: 50%;
+                    border-bottom: 1px solid rgb(102, 102, 102);
+                    z-index: 2;
+
+                    .background__pocket {
+                        position: absolute;
+                        bottom: 7%;
+                        left: 15%;
+                        transform: scale(.5);
+
+                        &--right {
+                            left: 75%;
+                        }
+                    }
+
+                    .background__long-pocket {
+                        position: absolute;
+                        bottom: -4%;
+                        left: 50%;
+                        transform: translateX(-50%) scale(0.6);
+                    }
+                }
+
+                &__lether {
+                    position: absolute;
+                    left: -10vw;
+                    top: 30%;
+                    width: 120vw;
+                    height: 65%;
+                    background-image: url('../images/lether.png');
+                    background-size: cover;
+                    border-bottom-left-radius: 50%;
+                    border-bottom-right-radius: 50%;
+                    z-index: 1;
+                    filter: brightness(2.5);
+                }
+
+                &__carpet {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    width: 100vw;
+                    background-image: url('../images/carpet.jpg');
+                    background-size: cover;
+                }
+
+                .circles-container {
+                    position: absolute;
+                    margin: 0 1vw;
+                    bottom: 0;
+                    right: 0;
+                    height: 15vh;
+                    z-index: 99;
+
+                    &__circle {
+                        position: absolute;
+                        top: 4.5vh;
+                        right: 1vh;
+                        width: 6vh;
+                        height: 6vh;
+                        background-color: #fff;
+                        border-radius: 50%;
+                        border: 2px solid black;
+                        cursor: pointer;
+                        transition: .5s;
+
+                        &--main {
+                            top: 2.5vh;
+                            width: 10vh;
+                            height: 10vh;
+                            background-color: grey;
+                        }
+
+                        &--green {
+                            background-color: green;
+
+                            &-active {
+                                right: 13vh;
+                            }
+                        }
+
+                        &--red {
+                            background-color: rgb(163, 1, 1);
+
+                            &-active {
+                                right: 23vh;
+                            }
+                        }
+
+                        &--blue {
+                            background-color: blue;
+
+                            &-active {
+                                right: 33vh;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .game {
+                position: absolute;
+                top: 11vh;
+                left: 0;
+                height: 89vh;
+                width: 100vw;
+                z-index: 98;
+                font-family: 'Bebas Neue';
+                letter-spacing: 1px;
+                color: rgba(255, 217, 0, 0.7);
+                font-size: .9rem;
+
+                &__deck {
+                    position: absolute;
+                    top: 5%;
+                    left: 15vw;
+                    width: 43px;
+                    height: 58px;
+                    z-index: 99;
+                    padding: 4px;
+                    border-top: 3px solid white;
+                    border-left: 3px solid white;
+
+                    &--start {
+                        left: 65vw;
+                        border: none;
+                    }
+                }
+
+                &__saldo {
+                    position: absolute;
+                    top: 50%;
+                    left: 10vw;
+
+                    span {
+                        font-size: 1.2rem;
+                        color: orangered;
+                    }
+                }
+
+                .form {
+                    position: absolute;
+                    top: 40%;
+                    left: 10vw;
+
+                    &__rate {
+                        background: transparent;
+                        border: 1px solid rgba(255, 217, 0, 0.7);
+                        box-shadow: 0 0 2px gold;
+                        font-size: 1rem;
+                        color: orangered;
+                        width: 65px;
+                        padding: .1rem;
+
+                        &:focus {
+                            outline: none;
+                            border: 1px solid orangered;
+                            box-shadow: 0 0 2px orangered;
+                        }
+                    }
+                }
+
+                &__play-btn {
+                    position: absolute;
+                    top: 55%;
+                    left: 45vw;
+                    padding: .2rem .6rem;
+                    color: rgba(255, 217, 0, 0.7);
+                    font-family: 'Bebas Neue';
+                    letter-spacing: 1px;
+                    font-size: 1.2rem;
+                    overflow: hidden;
+                    transition: .2s;
+                    background: transparent;
+                    border: none;
+                    box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+                    cursor: pointer;
+
+                    &:hover {
+                        background: orangered;
+                        box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+                    }
+                }
+
+                .option-btns {
+                    position: absolute;
+                    top: 50%;
+                    left: 50vw;
+                    transform: translateX(-50%);
+                    display: flex;
+                    flex-direction: row;
+
+                    &__btn {
+                        width: 3.5rem;
+                        height: 3.5rem;
+                        border-radius: 50%;
+                        background: rgba(255, 68, 0, 0.6);
+                        font-family: 'Bebas Neue';
+                        letter-spacing: 1px;
+                        color: rgba(255, 217, 0, 0.7);
+                        border: 2px solid rgba(255, 217, 0, 0.7);
+
+                        &:hover {
+                            border: 4px solid rgba(255, 217, 0, 0.7);
+                            background: orangered;
+                        }
+
+                        &--pick {
+                            margin-right: 1rem;
+                        }
+                    }
+                }
+
+                .stats {
+                    position: absolute;
+                    top: 10%;
+                    left: 80vw;
+                    font-size: .8rem;
+
+                    &__text {
+                        font-size: .9rem;
+                        margin-bottom: 1rem;
+                        text-shadow: 0 0 10px orangered, 0 0 30px orangered;
+                    }
+
+                    span {
+                        color: orangered;
+                        font-size: 1.1rem;
+                    }
+                }
+            }
         }
+    }
+}
 
-        &__wood {
-            position: absolute;
-            left: -10%;
-            top: 10%;
-            width: 120%;
-            height: 70%;
-            background-image: url('../images/wood.jpg');
-            background-size: cover;
-            border-bottom-left-radius: 50%;
-            border-bottom-right-radius: 50%;
-            border-bottom: 1px solid rgb(102, 102, 102);
-            z-index: 2;
+@media only screen and (orientation: landscape) and (min-height: 768px) {
+    .rotate-container {
+        display: none;
+    }
+
+    .blackjack {
+
+        .main {
+            display: block;
+
+
+            .background {
+
+                &__wood {
+
+                    .background__pocket {
+                        bottom: 14%;
+                        transform: scale(1);
+
+                        &--right {
+                            bottom: 12%;
+                        }
+                    }
+
+                    .background__long-pocket {
+                        bottom: 2%;
+                        transform: translateX(-50%) scale(1.2);
+                    }
+                }
+            }
         }
+    }
+}
 
-        &__lether {
-            position: absolute;
-            left: -10%;
-            top: 30%;
-            width: 120%;
-            height: 65%;
-            background-image: url('../images/lether.png');
-            background-size: cover;
-            border-bottom-left-radius: 50%;
-            border-bottom-right-radius: 50%;
-            z-index: 1;
-        }
+@media only screen and (orientation: landscape) and (min-width: 1440px) {
+    .rotate-container {
+        display: none;
+    }
 
-        &__carpet {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            background-image: url('../images/carpet.jpg');
-            background-size: cover;
+    .blackjack {
+
+        .main {
+            display: block;
+
+
+            .background {
+
+                &__wood {
+
+                    .background__pocket {
+                        bottom: 14%;
+                        transform: scale(1);
+
+                        &--right {
+                            bottom: 12%;
+                        }
+                    }
+
+                    .background__long-pocket {
+                        bottom: 2%;
+                        transform: translateX(-50%) scale(1.2);
+                    }
+                }
+            }
         }
     }
 }
